Solved bug on mobile devices

--- a/less/site.less
+++ b/less/site.less
@@ -159,8 +159,6 @@ nav ul#second-menu li a span {
   min-height:400px;
   min-width:100%;
   height: 100%;
-  padding: 10px;
-  padding-bottom: 0px;
   overflow: auto;
   background: @background;
   -webkit-transition: all 500ms ease;
@@ -170,6 +168,7 @@ nav ul#second-menu li a span {
 .page-center {
   max-width: 42em;
   margin: auto;
+  padding: 10px;
 }
 
 h1 {
